--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "comics",
   "version": "1.0.0",
   "description": "Website about Comic Book news and releases",
-  "main": "index.js",
+  "main": "app/server.js",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon app/server.js"
+    "start": "nodemon -e css,ejs,js,json --watch app app/server.js"
   },
   "repository": {
     "type": "git",
