--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "Website about Comic Book news and releases",
   "main": "app/server.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.0",
-    "mongodb": "^2.2.25"
+    "express-session": "^1.15.2",
+    "method-override": "^2.3.8",
+    "mongoose": "^4.9.4",
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2"
   },
   "devDependencies": {},
   "scripts": {
