--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "method-override": "^2.3.8",
     "mongoose": "^4.9.4",
     "morgan": "^1.8.1",
-    "passport": "^0.3.2"
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
