--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "ejs": "^2.5.6",
     "express": "^4.15.0",
     "express-session": "^1.15.2",
+    "magnific-popup": "^1.1.0",
     "method-override": "^2.3.8",
-    "mongoose": "^4.9.4",
+    "mongoose": "^4.7.2",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
