--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Website about Comic Book news and releases",
   "main": "app/server.js",
   "dependencies": {
+    "async": "^2.4.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
